package grpc

import (
	"context"

	"github.com/DimaJoyti/go-coffee/internal/auth/application"
	"github.com/DimaJoyti/go-coffee/pkg/logger"
)

// AuthHandler implements the gRPC auth service handlers
type AuthHandler struct {
	authService application.AuthService
	logger      *logger.Logger
}

// NewAuthHandler creates a new auth handler
func NewAuthHandler(authService application.AuthService, logger *logger.Logger) *AuthHandler {
	return &AuthHandler{
		authService: authService,
		logger:      logger,
	}
}

// Note: The following methods will be implemented once the proto files are generated
// For now, I'm providing the structure and conversion utilities

// convertUserToProto converts domain user to proto user
func (h *AuthHandler) convertUserToProto(user *application.UserDTO) interface{} {
	// TODO: Convert to proto User message when generated
	// This will be implemented after proto generation
	return nil
}

// convertSessionToProto converts domain session to proto session
func (h *AuthHandler) convertSessionToProto(session *application.SessionDTO) interface{} {
	// TODO: Convert to proto Session message when generated
	// This will be implemented after proto generation
	return nil
}

// convertTokenClaimsToProto converts domain token claims to proto token claims
func (h *AuthHandler) convertTokenClaimsToProto(claims *application.ClaimsDTO) interface{} {
	// TODO: Convert to proto TokenClaims message when generated
	// This will be implemented after proto generation
	return nil
}

// Register handles user registration
func (h *AuthHandler) Register(ctx context.Context, req interface{}) (interface{}, error) {
	h.logger.Info("gRPC Register request received")

	// TODO: Implement when proto is generated
	// 1. Convert proto request to application request
	// 2. Call authService.Register
	// 3. Convert response to proto response

	return nil, nil
}

// Login handles user login
func (h *AuthHandler) Login(ctx context.Context, req interface{}) (interface{}, error) {
	h.logger.Info("gRPC Login request received")

	// TODO: Implement when proto is generated
	// 1. Convert proto request to application request
	// 2. Call authService.Login
	// 3. Convert response to proto response

	return nil, nil
}

// Logout handles user logout
func (h *AuthHandler) Logout(ctx context.Context, req interface{}) (interface{}, error) {
	h.logger.Info("gRPC Logout request received")

	// TODO: Implement when proto is generated
	// 1. Convert proto request to application request
	// 2. Extract user ID from context or token
	// 3. Call authService.Logout
	// 4. Convert response to proto response

	return nil, nil
}

// RefreshToken handles token refresh
func (h *AuthHandler) RefreshToken(ctx context.Context, req interface{}) (interface{}, error) {
	h.logger.Info("gRPC RefreshToken request received")

	// TODO: Implement when proto is generated
	// 1. Convert proto request to application request
	// 2. Call authService.RefreshToken
	// 3. Convert response to proto response

	return nil, nil
}

// ValidateToken handles token validation
func (h *AuthHandler) ValidateToken(ctx context.Context, req interface{}) (interface{}, error) {
	h.logger.Info("gRPC ValidateToken request received")

	// TODO: Implement when proto is generated
	// 1. Convert proto request to application request
	// 2. Call authService.ValidateToken
	// 3. Convert response to proto response

	return nil, nil
}

// ChangePassword handles password change
func (h *AuthHandler) ChangePassword(ctx context.Context, req interface{}) (interface{}, error) {
	h.logger.Info("gRPC ChangePassword request received")

	// TODO: Implement when proto is generated
	// 1. Convert proto request to application request
	// 2. Extract user ID from context
	// 3. Call authService.ChangePassword
	// 4. Convert response to proto response

	return nil, nil
}

// GetUserInfo handles getting user information
func (h *AuthHandler) GetUserInfo(ctx context.Context, req interface{}) (interface{}, error) {
	h.logger.Info("gRPC GetUserInfo request received")

	// TODO: Implement when proto is generated
	// 1. Convert proto request to application request
	// 2. Call authService.GetUserInfo
	// 3. Convert response to proto response

	return nil, nil
}

// GetUserSessions handles getting user sessions
func (h *AuthHandler) GetUserSessions(ctx context.Context, req interface{}) (interface{}, error) {
	h.logger.Info("gRPC GetUserSessions request received")

	// TODO: Implement when proto is generated
	// 1. Convert proto request to application request
	// 2. Call authService.GetUserSessions
	// 3. Convert response to proto response

	return nil, nil
}

// RevokeSession handles session revocation
func (h *AuthHandler) RevokeSession(ctx context.Context, req interface{}) (interface{}, error) {
	h.logger.Info("gRPC RevokeSession request received")

	// TODO: Implement when proto is generated
	// 1. Convert proto request to application request
	// 2. Call authService.RevokeSession
	// 3. Convert response to proto response

	return nil, nil
}

// RevokeAllUserSessions handles revoking all user sessions
func (h *AuthHandler) RevokeAllUserSessions(ctx context.Context, req interface{}) (interface{}, error) {
	h.logger.Info("gRPC RevokeAllUserSessions request received")

	// TODO: Implement when proto is generated
	// 1. Convert proto request to application request
	// 2. Call authService.RevokeAllUserSessions
	// 3. Convert response to proto response

	return nil, nil
}
